# tennis-autoedit

./: longer-test.m4a  memo.srt  pyproject.toml  segments.csv  test.m4a
src/tennis_autoedit/: __init__.py  audio_utils.py  cli.py  file_io.py  segmentation.py  transcription.py
