[project]
name = "tennis-autoedit"
version = "0.1.0"
description = "Trim an audio memo between spoken 'start'/'stop' markers; emit SRT."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "faster-whisper",
  "pydub",
  "soundfile",
  "numpy",
  "rapidfuzz",
  "audioop-lts>=0.2.2",
  "revup>=0.4.0",
]

[project.scripts]
tennis-cut = "tennis_autoedit.cli:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
strict = false
